@@ -51,7 +51,7 @@
 		      <signal name="activate" handler="on_menuallfs_activate" last_modification_time="Tue, 05 Jul 2005 08:47:26 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image332">
+			<widget class="GtkImage" id="image341">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-harddisk</property>
 			  <property name="icon_size">1</property>
@@ -72,7 +72,7 @@
 		      <signal name="activate" handler="on_menuscandir_activate" last_modification_time="Tue, 05 Jul 2005 08:47:26 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image333">
+			<widget class="GtkImage" id="image342">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-directory</property>
 			  <property name="icon_size">1</property>
@@ -93,7 +93,7 @@
 		      <signal name="activate" handler="on_menu_scan_rem_activate" last_modification_time="Fri, 18 Nov 2005 18:20:25 GMT"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image334">
+			<widget class="GtkImage" id="image343">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-network</property>
 			  <property name="icon_size">1</property>
@@ -143,7 +143,7 @@
 		      <accelerator key="F" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image335">
+			<widget class="GtkImage" id="image344">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-find</property>
 			  <property name="icon_size">1</property>
@@ -224,7 +224,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_Name</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <signal name="activate" handler="on_sort_alfa_activate" last_modification_time="Fri, 08 Jul 2005 20:16:01 GMT"/>
 			    </widget>
 			  </child>
@@ -245,7 +245,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_Type</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">menu_sort_alfa</property>
 			      <signal name="activate" handler="on_by_type1_activate" last_modification_time="Thu, 04 Aug 2005 13:23:50 GMT"/>
 			    </widget>
@@ -256,7 +256,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_Date</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">menu_sort_alfa</property>
 			      <signal name="activate" handler="on_by_date1_activate" last_modification_time="Thu, 04 Aug 2005 13:39:38 GMT"/>
 			    </widget>
